# MLOPS-Experiment02

./: .dockerignore  .gitignore  Allfiles  Dockerfile  Jenkinsfile  README.md  combine_all_files.sh  combine_from_list.sh  combined_output.txt  docker-compose.yml  file_list.txt  main.py  main_pipeline.py  merge.py  pyproject.toml  rebuild_backend.sh  requirements.txt  setup.py  ui.
.dvc/: config
api/: api.py  auth.py  cache.py  metrics.py  models.py  server.py
artifacts/: model.dvc  model_checkpoint.dvc  processed.dvc  raw.dvc  weights.dvc
backend/: .dockerignore  Dockerfile
config/: app_config.py  config.yaml  paths_config.py
core/: logging_config.py
custom_jenkins/: Dockerfile
database/: feedback_repository.py
deploy/: backend-deployment.yaml  grafana-datasource.yaml  prometheus-observability.yaml  redis.yaml  ui-deployment.yaml
pipeline/: faiss_index.py  model_training.py  prediction_pipeline.py
src/: base_model.py  custom_exception.py  data_ingestion.py  data_processing.py  logger.py  main_pipeline.py  model_training.py  src.txt  statsummary.py
src/evaluation/: opik_evaluator.py
test/: test.py  tester.py
ui/: Dockerfile  admin.py  app.py  app.py_old  jikan_client.py  requirements.txt  utils_ui.py
ui/pages/: 1_Recommend.py  2_Admin.py
utils/: common_functions.py  convert_csv_to_parquet.py  helpers.py
worker/: celery_beat.py  celery_worker.py
